[package]
name = "hermetic-mls"
version = "0.1.0"
authors = ["Hermetic Labs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.22"
time = ">=0.3.36"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# gRPC dependencies
tonic = { version = "0.13.1", features = ["transport"] }
prost = "0.13.5"
prost-types = "0.13.5"
tonic-web = "0.13.1"
tonic-reflection = "0.13.0"
tower-http = { version = "0.6.2", features = ["cors"] }

openmls = { git = "https://github.com/openmls/openmls", features = ["test-utils"] }
ds-lib = { git = "https://github.com/openmls/openmls", package = "ds-lib" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", package = "openmls_rust_crypto" }
openmls_traits = { git = "https://github.com/openmls/openmls", package = "openmls_traits" }
openmls_basic_credential = { git = "https://github.com/openmls/openmls", package = "openmls_basic_credential" }

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
rand = "0.8"
proptest = "1.4.0"
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
